# dqsweep

./: .gitignore  README.md  application.py  config.yaml  depolarise_link.yaml  nv_qdevice.yaml  pyproject.toml  pytest.ini  requirements.txt  run_simulation.py  teleportation.py
.github/workflows/: python-app.yml
Nonlocal_CNOT/: test.ipynb
configurations/: 3_nodes.yaml  config.yaml  depolarise_link.yaml  heralded_link.yaml  nv_qdevice.yaml  perfect.yaml
experiments/: dgrover.py  dgrover_2.py  dqft_2.py  grover.py  nonlocal_cnot.py  nonlocal_cnot_2_teleportations.py  nonlocal_cnot_teledata.py  nonlocal_toffoli.py  pingpong.py  run_simulation.py  teleportation.py  utils.py
results/cnot_single_two/: cnot_results.csv
results/pingpong_single_two/: pingpong_results.csv
results/teleportation_single_two/: teleportation_results.csv
tests/: test_dgrover.py  test_dgrover_2.py  test_dqft_2.py  test_gates.py  test_helper.py  test_nonlocal_cnot.py  test_nonlocal_cnot_2_teleportations.py  test_nonlocal_cnot_telegate.py  test_nonlocal_teledata.py  test_nonlocal_toffoli.py  test_pingpong.py  test_sweep_parameters.py  test_utils.py
utils/: gates.py  helper.py  plots.py  routines.py
