[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dqsweep"
version = "0.1.0"
description = "Performance analysis of several distributed quantum computing experiments"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE.txt" }
authors = [{ name = "Quang-Phong Tran", email = "quangphong755@gmail.com" }]

[project.scripts]
run_simulation = "experiments.run_simulation:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
# ignore deprecation warnings coming from external packages using NetSquid and SquidASM
filterwarnings = ["ignore::DeprecationWarning"]

[project.urls]
Repository = "https://github.com/Quang00/dqsweep"
